--- a/final.ipynb
+++ b/final.ipynb
@@ -431,17 +431,17 @@
         "    mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
         "    return mask\n",
         "\n",
-        "  def 4d_mult(self, batch, q_w, bs):\n",
-        "  layers = batch.shape[1]\n",
-        "  dim1 = batch.shape[2]\n",
-        "  dim2 = batch.shape[3]\n",
-        "  output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
-        "  return output.view(bs,layers,dim1,dim2)\n",
+        "  def mult_4d(self, batch, q_w, bs):\n",
+        "    layers = batch.shape[1]\n",
+        "    dim1 = batch.shape[2]\n",
+        "    dim2 = batch.shape[3]\n",
+        "    output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
+        "    return output.view(bs,layers,dim1,dim2)\n",
         "\n",
         "  def forward(self):\n",
         "\n",
         "    #score\n",
-        "    attn_output_weights = 4d_mult(q, k)"
+        "    attn_output_weights = mult_4d(q, k)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -481,7 +481,7 @@
         "        self.dropout = nn.Dropout(dropout)\n",
         "        self.out = nn.Linear(d_model, d_model)\n",
         "    \n",
-        "    def 4d_mult(self, batch, q_w, bs):\n",
+        "    def mult_4d(self, batch, q_w, bs):\n",
         "      layers = batch.shape[1]\n",
         "      dim1 = batch.shape[2]\n",
         "      dim2 = batch.shape[3]\n",
@@ -494,9 +494,9 @@
         "        features_changer = FeatureChanger(batch.shape[1],batch.shape[1]/self.h*2)\n",
         "        batch = feature_changer(batch)\n",
         "\n",
-        "        q = 4d_mult(batch,self.q_3d,bs)\n",
-        "        k = 4d_mult(batch,self.k_3d,bs)\n",
-        "        v = 4d_mult(batch,self.v_3d,bs)\n",
+        "        q = mult_4d(batch,self.q_3d,bs)\n",
+        "        k = mult_4d(batch,self.k_3d,bs)\n",
+        "        v = mult_4d(batch,self.v_3d,bs)\n",
         "        #divide feature space in no of heads each head works on certain features only\n",
         "        #returns tuple of size=heads\n",
         "\n",
@@ -827,11 +827,11 @@
       "metadata": {
         "id": "qJaUxw9xUnzs",
         "colab_type": "code",
+        "outputId": "3936a479-eb33-4880-c0ca-95ca559090ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "3936a479-eb33-4880-c0ca-95ca559090ab"
+        }
       },
       "source": [
         "def generate_square_subsequent_mask(sz):\n",
@@ -845,7 +845,7 @@
         "mask= generate_square_subsequent_mask(4)\n",
         "mask"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -869,16 +869,16 @@
       "metadata": {
         "id": "ATIum5xpVa22",
         "colab_type": "code",
+        "outputId": "df4b70ac-cc97-427d-bdca-a113b14f595a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 162
-        },
-        "outputId": "df4b70ac-cc97-427d-bdca-a113b14f595a"
+        }
       },
       "source": [
         "mask.unsqueeze(0).unsqueeze(0)+a"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -898,16 +898,16 @@
       "metadata": {
         "id": "UCso7oABVzfe",
         "colab_type": "code",
+        "outputId": "fba15462-f265-46fc-89e9-b98668cc655c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fba15462-f265-46fc-89e9-b98668cc655c"
+        }
       },
       "source": [
         "mask.unsqueeze(0).unsqueeze(0).shape"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,16 +954,16 @@
       "metadata": {
         "id": "xYV6hRkGYmoy",
         "colab_type": "code",
+        "outputId": "f56e06e6-8800-457a-bbaf-317369b7171a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f56e06e6-8800-457a-bbaf-317369b7171a"
+        }
       },
       "source": [
         "c.shape"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
