--- a/final.ipynb
+++ b/final.ipynb
@@ -395,6 +395,7 @@
         "        super().__init__()\n",
         "        \n",
         "        self.kernel_size = 1\n",
+        "        \n",
         "        self.in_channels = in_channels\n",
         "        self.out_channels = out_channels\n",
         "        self.conv2d_0 = torch.nn.Conv2d(in_channels, out_channels*2, kernel_size, stride=1)\n",
@@ -418,11 +419,13 @@
       "source": [
         "class MaskedSelfAttention(nn.Module):\n",
         "\n",
-        "  def __init__(self,heads, d_model):\n",
+        "  def __init__(self,heads, d_model, dropout= .4):\n",
         "    super().__init__()\n",
         "\n",
         "    self.d_model = d_model\n",
         "    self.heads = heads\n",
+        "    self.soft2d = nn.Softmax2d()\n",
+        "    self.drop = nn.Dropout(dropout)\n",
         "\n",
         "\n",
         "  def _generate_square_subsequent_mask(self, sz):\n",
@@ -431,17 +434,26 @@
         "    mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
         "    return mask\n",
         "\n",
-        "  def mult_4d(self, batch, q_w, bs):\n",
+        "  def mult_4d(self, batch, q_w):\n",
+        "    bs= batch.shape[0]\n",
         "    layers = batch.shape[1]\n",
         "    dim1 = batch.shape[2]\n",
         "    dim2 = batch.shape[3]\n",
         "    output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
         "    return output.view(bs,layers,dim1,dim2)\n",
         "\n",
-        "  def forward(self):\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def forward(self, q , k, v):\n",
         "\n",
         "    #score\n",
-        "    attn_output_weights = mult_4d(q, k)"
+        "    attn_output_weights = mult_4d(q, k.transpose(-2,-1))/math.sqrt(layers/2)\n",
+        "    soft_scores = self.soft2d(attn_output_weights)\n",
+        "    soft_scores = self.drop(soft_scores)\n",
+        "    output = mult_4d(v, soft_scores)\n",
+        "\n",
+        "    return output"
       ],
       "execution_count": 0,
       "outputs": []
@@ -456,13 +468,15 @@
       "source": [
         "\n",
         "class MultiHeadAttention(nn.Module):\n",
-        "    def __init__(self, heads, d_model, dropout = 0.1):\n",
+        "    def __init__(self, heads, d_model, dim1, dim2, dropout = 0.4):\n",
         "        super().__init__()\n",
         "        \n",
         "        self.d_model = d_model\n",
-        "        self.d_k = d_model // heads\n",
         "        self.h = heads\n",
-        "        \n",
+        "        self.dim1 = dim1\n",
+        "        self.dim2 =dim2\n",
+        "        self.dropout = dropout\n",
+        "        self.nu_feat = d_model/h*2\n",
         "        self.q_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
         "        self.k_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
         "        self.v_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
@@ -472,14 +486,7 @@
         "        nn.init.kaiming_normal_(k_3d, mode='fan_in')\n",
         "        nn.init.kaiming_normal_(v_3d, mode='fan_in')\n",
         "\n",
-        "        self.attention_layer= MaskedSelfAttention()\n",
-        "        \n",
-        "        \n",
-        "        #self.q_linear = nn.Linear(d_model, d_model)\n",
-        "        #self.v_linear = nn.Linear(d_model, d_model)\n",
-        "        #self.k_linear = nn.Linear(d_model, d_model)\n",
-        "        self.dropout = nn.Dropout(dropout)\n",
-        "        self.out = nn.Linear(d_model, d_model)\n",
+        "        self.attention_layer= MaskedSelfAttention(h,d_model,dropout)\n",
         "    \n",
         "    def mult_4d(self, batch, q_w, bs):\n",
         "      layers = batch.shape[1]\n",
@@ -491,7 +498,8 @@
         "    def forward(self, batch, mask=None):\n",
         "        \n",
         "        bs = q.size(0)\n",
-        "        features_changer = FeatureChanger(batch.shape[1],batch.shape[1]/self.h*2)\n",
+        "        channels = batch.shape[1]\n",
+        "        features_changer = FeatureChanger(channels,channels/self.h*2)\n",
         "        batch = feature_changer(batch)\n",
         "\n",
         "        q = mult_4d(batch,self.q_3d,bs)\n",
@@ -506,26 +514,8 @@
         "\n",
         "        attention_out= attention_layer(batch_chunks, q, k, v)\n",
         "        \n",
-        "        \n",
-        "        # perform linear operation and split into h heads\n",
-        "        \n",
-        "        k = self.k_linear(k).view(bs, -1, self.h, self.d_k)\n",
-        "        q = self.q_linear(q).view(bs, -1, self.h, self.d_k)\n",
-        "        v = self.v_linear(v).view(bs, -1, self.h, self.d_k)\n",
-        "        \n",
-        "        # transpose to get dimensions bs * h * sl * d_model\n",
-        "       \n",
-        "        k = k.transpose(1,2)\n",
-        "        q = q.transpose(1,2)\n",
-        "        v = v.transpose(1,2)\n",
-        "# calculate attention using function we will define next\n",
-        "        scores = attention(q, k, v, self.d_k, mask, self.dropout)\n",
-        "        \n",
-        "        # concatenate heads and put through final linear layer\n",
-        "        concat = scores.transpose(1,2).contiguous()\\\n",
-        "        .view(bs, -1, self.d_model)\n",
-        "        \n",
-        "        output = self.out(concat)\n",
+        "        output = FeatureChanger(channels/self.h*2,channels)\n",
+        "  \n",
         "    \n",
         "        return output"
       ],
@@ -810,17 +800,71 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3LKT4Uxxi1Ca",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "2d3678cf-cb99-41c0-dece-d5b748e97095"
+      },
+      "source": [
+        "a=torch.tensor([[1,2],[3,4]])\n",
+        "b=torch.tensor([[1,2],[3,4]])\n",
+        "b@a\n",
+        "#torch.bmm(a.unsqueeze(0),b.unsqueeze(0))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 7, 10],\n",
+              "        [15, 22]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "c1X52HvABqQr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d855b7bf-fc8f-4696-b0d1-90e5b972b169"
       },
       "source": [
         "w = torch.rand(4,2,2,2)\n",
         "a = torch.rand(4,2,2,2)\n",
-        "#torch.bmm(w,a).shape"
+        "o=mult_4d(w,a.transpose(-2,-1),4)\n",
+        "#torch.bmm(w,a).shape\n",
+        "l=nn.Dropout()\n",
+        "l(o).shape"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([4, 2, 2, 2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
