hurrayyyy, enocder debugged, yaeee

--- a/final.ipynb
+++ b/final.ipynb
@@ -80,7 +80,7 @@
       "source": [
         "import os\n",
         "import re\n",
-        "\n",
+        "import math\n",
         "# Suppose you are trying to load pre-trained resnet model in directory- models\\resnet\n",
         "\n",
         "os.environ['TORCH_HOME'] = 'D:\\dev\\Pytorch_Models\\models\\\\resnet' #setting the environment variable\n"
@@ -93,10 +93,45 @@
       "metadata": {
         "id": "LLdnAS6ETnmi",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "c94dad09-8581-475d-f3f4-200ee7eb1111"
+      },
+      "source": [
+        "!wget --header=\"Host: www.cityscapes-dataset.com\" --header=\"User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.97 Safari/537.36\" --header=\"Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3\" --header=\"Accept-Language: en-GB,en-US;q=0.9,en;q=0.8\" --header=\"Referer: https://www.cityscapes-dataset.com/downloads/\" --header=\"Cookie: PHPSESSID=4f0gk1d5hbc0ikttngvpm8ff52\" --header=\"Connection: keep-alive\" \"https://www.cityscapes-dataset.com/file-handling/?packageID=4\" -O \"leftImg8bit_trainextra.zip\" -c"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2019-11-19 12:43:28--  https://www.cityscapes-dataset.com/file-handling/?packageID=4\n",
+            "Resolving www.cityscapes-dataset.com (www.cityscapes-dataset.com)... 139.19.217.8\n",
+            "Connecting to www.cityscapes-dataset.com (www.cityscapes-dataset.com)|139.19.217.8|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 47230218747 (44G) [application/octet-stream]\n",
+            "Saving to: ‘leftImg8bit_trainextra.zip’\n",
+            "\n",
+            "leftImg8bit_trainex 100%[===================>]  43.99G  25.7MB/s    in 29m 35s \n",
+            "\n",
+            "2019-11-19 13:13:05 (25.4 MB/s) - ‘leftImg8bit_trainextra.zip’ saved [47230218747/47230218747]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OTndZBfHtTZa",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "!unzip leftImg8bit_trainextra.zip"
       ],
       "execution_count": 0,
       "outputs": []
@@ -326,8 +361,7 @@
         "colab": {}
       },
       "source": [
-        "dataloader = DataLoader(transformed_dataset, batch_size=4,\n",
-        "                        sampler=torch.utils.data.SequentialSampler(transformed_dataset) , num_workers=4)"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -373,11 +407,11 @@
         "colab": {}
       },
       "source": [
-        "res50_model = models.resnet50(pretrained=True)\n",
-        "res50_conv2 = ResNet50Bottom(res50_model).cuda()\n",
-        "\n",
-        "outputs = res50_conv2(x.to('cuda'))\n",
-        "outputs.data.shape"
+        "#res50_model = models.resnet50(pretrained=True)\n",
+        "#res50_conv2 = ResNet50Bottom(res50_model).cuda()\n",
+        "#\n",
+        "#outputs = res50_conv2(x.to('cuda'))\n",
+        "#outputs.data.shape"
       ],
       "execution_count": 0,
       "outputs": []
@@ -395,15 +429,15 @@
         "        super().__init__()\n",
         "        \n",
         "        self.kernel_size = 1\n",
-        "        \n",
+        "\n",
         "        self.in_channels = in_channels\n",
         "        self.out_channels = out_channels\n",
-        "        self.conv2d_0 = torch.nn.Conv2d(in_channels, out_channels*2, kernel_size, stride=1)\n",
-        "        self.con2d_1 = torch.nn.Conv2d(out_channels*2, out_channels, kernel_size, stride=1)\n",
+        "        self.conv2d_0 = torch.nn.Conv2d(in_channels, out_channels, self.kernel_size, stride=1)\n",
+        "        #self.con2d_1 = torch.nn.Conv2d(out_channels*2, out_channels, kernel_size, stride=1)\n",
         "        \n",
         "    def forward(self, batch):\n",
         "        x = self.conv2d_0(batch)\n",
-        "        x = self.con2d_1(x)\n",
+        "        #x = self.con2d_1(x)\n",
         "        return x"
       ],
       "execution_count": 0,
@@ -426,7 +460,7 @@
         "    self.heads = heads\n",
         "    self.soft2d = nn.Softmax2d()\n",
         "    self.drop = nn.Dropout(dropout)\n",
-        "\n",
+        "    \n",
         "\n",
         "  def _generate_square_subsequent_mask(self, sz):\n",
         "    #sz= batch size\n",
@@ -448,10 +482,10 @@
         "  def forward(self, q , k, v):\n",
         "\n",
         "    #score\n",
-        "    attn_output_weights = mult_4d(q, k.transpose(-2,-1))/math.sqrt(layers/2)\n",
+        "    attn_output_weights = self.mult_4d(q, k.transpose(-2,-1))/math.sqrt(self.d_model/2)\n",
         "    soft_scores = self.soft2d(attn_output_weights)\n",
         "    soft_scores = self.drop(soft_scores)\n",
-        "    output = mult_4d(v, soft_scores)\n",
+        "    output = self.mult_4d(v, soft_scores)\n",
         "\n",
         "    return output"
       ],
@@ -468,7 +502,7 @@
       "source": [
         "\n",
         "class MultiHeadAttention(nn.Module):\n",
-        "    def __init__(self, heads, d_model, dim1, dim2, dropout = 0.4):\n",
+        "    def __init__(self, bs, heads, d_model, dim1, dim2, dropout = 0.4):\n",
         "        super().__init__()\n",
         "        \n",
         "        self.d_model = d_model\n",
@@ -476,17 +510,22 @@
         "        self.dim1 = dim1\n",
         "        self.dim2 =dim2\n",
         "        self.dropout = dropout\n",
-        "        self.nu_feat = d_model/h*2\n",
-        "        self.q_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
-        "        self.k_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
-        "        self.v_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
+        "        self.nu_feat = int(d_model/self.h*2)\n",
+        "        self.bs = bs\n",
+        "        res50_model = models.resnet50(pretrained=True)\n",
+        "        self.resnet_back = ResNet50Bottom(res50_model).cuda()\n",
+        "\n",
+        "\n",
+        "        self.q_3d = torch.nn.Parameter(torch.empty(bs,self.nu_feat,dim1,dim2,requires_grad=True))\n",
+        "        self.k_3d = torch.nn.Parameter(torch.empty(bs,self.nu_feat,dim1,dim2,requires_grad=True))\n",
+        "        self.v_3d = torch.nn.Parameter(torch.empty(bs,self.nu_feat,dim1,dim2,requires_grad=True))\n",
         "   \n",
         "\n",
-        "        nn.init.kaiming_normal_(q_3d, mode='fan_in')\n",
-        "        nn.init.kaiming_normal_(k_3d, mode='fan_in')\n",
-        "        nn.init.kaiming_normal_(v_3d, mode='fan_in')\n",
+        "        nn.init.kaiming_normal_(self.q_3d, mode='fan_in')\n",
+        "        nn.init.kaiming_normal_(self.k_3d, mode='fan_in')\n",
+        "        nn.init.kaiming_normal_(self.v_3d, mode='fan_in')\n",
         "\n",
-        "        self.attention_layer= MaskedSelfAttention(h,d_model,dropout)\n",
+        "        self.attention_layer= MaskedSelfAttention(self.h,d_model,dropout)\n",
         "    \n",
         "    def mult_4d(self, batch, q_w, bs):\n",
         "      layers = batch.shape[1]\n",
@@ -496,15 +535,15 @@
         "      return output.view(bs,layers,dim1,dim2)\n",
         "\n",
         "    def forward(self, batch, mask=None):\n",
-        "        \n",
-        "        bs = q.size(0)\n",
+        "        batch = self.resnet_back(batch.to('cuda'))\n",
+        "        bs = batch.size(0)\n",
         "        channels = batch.shape[1]\n",
-        "        features_changer = FeatureChanger(channels,channels/self.h*2)\n",
-        "        batch = feature_changer(batch)\n",
+        "        feature_layer1 = FeatureChanger(channels,int(channels/self.h*2)).cuda()\n",
+        "        batch = feature_layer1(batch)\n",
         "\n",
-        "        q = mult_4d(batch,self.q_3d,bs)\n",
-        "        k = mult_4d(batch,self.k_3d,bs)\n",
-        "        v = mult_4d(batch,self.v_3d,bs)\n",
+        "        q = self.mult_4d(batch,self.q_3d.to('cuda'),bs)\n",
+        "        k = self.mult_4d(batch,self.k_3d.to('cuda'),bs)\n",
+        "        v = self.mult_4d(batch,self.v_3d.to('cuda'),bs)\n",
         "        #divide feature space in no of heads each head works on certain features only\n",
         "        #returns tuple of size=heads\n",
         "\n",
@@ -512,15 +551,93 @@
         "        #converting tuple to tensor\n",
         "        batch_chunks = torch.stack(batch_chunks, dim =0)\n",
         "\n",
-        "        attention_out= attention_layer(batch_chunks, q, k, v)\n",
-        "        \n",
-        "        output = FeatureChanger(channels/self.h*2,channels)\n",
+        "        attention_out = self.attention_layer( q, k, v)\n",
+        "        feature_layer2 = FeatureChanger(int(channels/self.h*2),channels).cuda()\n",
+        "        output = feature_layer2(batch)\n",
         "  \n",
         "    \n",
         "        return output"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0wiy5LxisgFu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "batch_size = 2\n",
+        "dataloader = DataLoader(transformed_dataset, batch_size,\n",
+        "                        sampler=torch.utils.data.SequentialSampler(transformed_dataset) , num_workers=4)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sFa4dkniuO4D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "heads = 8\n",
+        "d_model = 256\n",
+        "dim1, dim2=56 ,56\n",
+        "dropout = 0.4\n",
+        "\n",
+        "\n",
+        "MHA= MultiHeadAttention(batch_size, heads, d_model, dim1, dim2, dropout = 0.4)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NsgWDhCXy_uQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "output = MHA(next(iter(dataloader)))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4BsfTOGr_Tk7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2fb595a4-b693-4998-beda-f19e67642fb4"
+      },
+      "source": [
+        "output.shape"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 256, 56, 56])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 114
+        }
+      ]
     },
     {
       "cell_type": "code",
