alternate path- use full size images instead of feature channel, resnet backbone not using

--- a/final.ipynb
+++ b/final.ipynb
@@ -484,7 +484,7 @@
         "    #score\n",
         "    attn_output_weights = self.mult_4d(q, k.transpose(-2,-1))/math.sqrt(self.d_model/2)\n",
         "    soft_scores = self.soft2d(attn_output_weights)\n",
-        "    soft_scores = self.drop(soft_scores)\n",
+        "    soft_scores = self.drop(soft_scores).to('cuda')\n",
         "    output = self.mult_4d(v, soft_scores)\n",
         "\n",
         "    return output"
@@ -510,7 +510,7 @@
         "        self.dim1 = dim1\n",
         "        self.dim2 =dim2\n",
         "        self.dropout = dropout\n",
-        "        self.nu_feat = int(d_model/self.h*2)\n",
+        "        self.nu_feat =d_model # int(d_model/self.h*2)\n",
         "        self.bs = bs\n",
         "        res50_model = models.resnet50(pretrained=True)\n",
         "        self.resnet_back = ResNet50Bottom(res50_model).cuda()\n",
@@ -528,6 +528,7 @@
         "        self.attention_layer= MaskedSelfAttention(self.h,d_model,dropout)\n",
         "    \n",
         "    def mult_4d(self, batch, q_w, bs):\n",
+        "      \n",
         "      layers = batch.shape[1]\n",
         "      dim1 = batch.shape[2]\n",
         "      dim2 = batch.shape[3]\n",
@@ -535,25 +536,33 @@
         "      return output.view(bs,layers,dim1,dim2)\n",
         "\n",
         "    def forward(self, batch, mask=None):\n",
-        "        batch = self.resnet_back(batch.to('cuda'))\n",
         "        bs = batch.size(0)\n",
+        "        batch = batch.to('cuda')\n",
+        "        \"\"\" \n",
+        "        batch = self.resnet_back(batch.to('cuda'))        \n",
         "        channels = batch.shape[1]\n",
         "        feature_layer1 = FeatureChanger(channels,int(channels/self.h*2)).cuda()\n",
         "        batch = feature_layer1(batch)\n",
         "\n",
+        "        \"\"\"\n",
+        "\n",
         "        q = self.mult_4d(batch,self.q_3d.to('cuda'),bs)\n",
         "        k = self.mult_4d(batch,self.k_3d.to('cuda'),bs)\n",
         "        v = self.mult_4d(batch,self.v_3d.to('cuda'),bs)\n",
+        "\n",
+        "        \"\"\"\n",
         "        #divide feature space in no of heads each head works on certain features only\n",
         "        #returns tuple of size=heads\n",
         "\n",
         "        batch_chunks= torch.chunk(batch, heads, dim=1)\n",
         "        #converting tuple to tensor\n",
         "        batch_chunks = torch.stack(batch_chunks, dim =0)\n",
+        "        \"\"\"\n",
         "\n",
         "        attention_out = self.attention_layer( q, k, v)\n",
-        "        feature_layer2 = FeatureChanger(int(channels/self.h*2),channels).cuda()\n",
-        "        output = feature_layer2(batch)\n",
+        "        #feature_layer2 = FeatureChanger(int(channels/self.h*2),channels).cuda()\n",
+        "        #output = feature_layer2(batch)\n",
+        "        output = attention_out\n",
         "  \n",
         "    \n",
         "        return output"
@@ -586,8 +595,8 @@
       "source": [
         "\n",
         "heads = 8\n",
-        "d_model = 256\n",
-        "dim1, dim2=56 ,56\n",
+        "d_model = 3\n",
+        "dim1 = dim2= 224\n",
         "dropout = 0.4\n",
         "\n",
         "\n",
@@ -618,24 +627,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2fb595a4-b693-4998-beda-f19e67642fb4"
+        "outputId": "ff98e775-9f15-4793-b455-8bbb1c28a34e"
       },
       "source": [
         "output.shape"
       ],
-      "execution_count": 114,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([2, 256, 56, 56])"
+              "torch.Size([2, 3, 224, 224])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 145
         }
       ]
     },
@@ -644,10 +653,10 @@
       "metadata": {
         "id": "LWKnxJT2Tnmz",
         "colab_type": "code",
-        "outputId": "9cedcbec-71c5-461d-8f5a-99c24249251e",
+        "outputId": "c5c315e9-9fd1-4c4c-fe0a-9d13a61ad37b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 33
+          "height": 34
         }
       },
       "source": [
@@ -660,19 +669,19 @@
         "nn.init.kaiming_uniform_(w, mode='fan_in')\n",
         "(a*w).argmax()"
       ],
-      "execution_count": 0,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(29802)"
+              "tensor(12876)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 146
         }
       ]
     },
